# kappa

./: .gitignore  CLAUDE.md  README.md  app.py  build.bat  create_excel.py  kappa.spec  pyproject.toml
.github/workflows/: build.yml
templates/: certificate.pptx  classroom.pptx  hitnasuyot.pptx  name_tags.pptx  room_signs.docx
