[project]
name = "kappa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lxml>=5.0",
    "openpyxl>=3.1.5",
    "ortools>=9.15.6755",
    "pydantic>=2.13.4",
    "python-bidi>=0.6.10",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]
